--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<!-- Beginning of NavBar -->
-	
+
 	<nav class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -41,6 +41,36 @@
 
 	<!-- End of NavBar -->
 
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 panel panel-default">
+				<div class="panel-heading">
+					<h1>About Me</h1>
+				</div>
+				<div class="panel-body">
+					<div class="col-md-4">
+						<img src="assets/images/FB_IMG-1_1504982928955.jpg" class="img-thumbnail" alt="Image">
+					</div>
+					<div class="col-md-8">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h1>Connect with Me</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 </body>
