--- a/index.html
+++ b/index.html
@@ -62,15 +62,34 @@
 					</div>
 				</div>
 			</div>
+
+
 			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h1>Connect with Me</h1>
 					</div>
+					<div class="panel-body">
+						<div class="col-md-4 icon-image">
+							<a href="#"><img src="assets/images/if_github_253591.png" class="img-responsive" alt="Image"></a>
+						</div>
+						<div class="col-md-4 icon-image">
+							<a href="#"><img src="assets/images/if_overflow_386674.png" class="img-responsive" alt="Image"></a>
+						</div>
+						<div class="col-md-4 icon-image">
+							<a href="#"><img src="assets/images/if_linkedin_252090.png" class="img-responsive" alt="Image"></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<nav class="navbar navbar-default navbar-fixed-bottom footer" role="navigation">
+		<div class="container">
+			<p>Copyright 2017 Andrew Reyes-Cairo</p>
+		</div>
+	</nav>
 
 
 </body>
