bunch of changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<!-- CSS Links -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -25,7 +27,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html"><span>Andrew Reyes-Cairo</span></a>
+				<a class="navbar-brand nbar" href="index.html"><span>Andrew Reyes-Cairo</span></a>
 			</div>
 	
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,40 +46,42 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 panel panel-default">
-				<div class="panel-heading">
-					<h1>About Me</h1>
-				</div>
-				<div class="panel-body">
-					<div class="col-md-4">
-						<img src="assets/images/FB_IMG-1_1504982928955.jpg" class="img-thumbnail" alt="Image">
+			<div class="col-md-9">
+				<div class="panel panel-primary">
+					<div class="panel-heading panelHeaderDiv">
+						<h2 class="panelHeader1">About Me</h2>
 					</div>
-					<div class="col-md-8">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div class="panel-body">
+						<div class="col-md-4">
+						<img src="assets/images/FB_IMG-1_1504982928955.jpg" class="img-thumbnail" alt="Image">
+						</div>
+						<div class="col-md-8">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="col-md-4">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h1>Connect with Me</h1>
+			<div class="col-md-3">
+				<div class="panel panel-success">
+					<div class="panel-heading connectHeading">
+						<h2 class="panelHeader2">Connect with Me</h2>
 					</div>
 					<div class="panel-body">
 						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_github_253591.png" class="img-responsive" alt="Image"></a>
+							<a href="#"><img src="assets/images/if_linkedin-square-gloss-social-media_765001.png" class="img-responsive" alt="Image"></a>
 						</div>
 						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_overflow_386674.png" class="img-responsive" alt="Image"></a>
+							<a href="#"><img src="assets/images/if_github-square-shadow-social-media_765124.png" class="img-responsive" alt="Image"></a>
 						</div>
 						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_linkedin_252090.png" class="img-responsive" alt="Image"></a>
+							<a href="#"><img src="assets/images/if_stackoverflow-square-social-media_764927.png" class="img-responsive" alt="Image"></a>
 						</div>
 					</div>
 				</div>
@@ -87,7 +91,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom footer" role="navigation">
 		<div class="container">
-			<p>Copyright 2017 Andrew Reyes-Cairo</p>
+			<p>© Copyright 2017 Andrew Reyes-Cairo</p>
 		</div>
 	</nav>
 
