added contact page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-9">
-				<div class="panel panel-primary">
+				<div class="panel panel-primary wholePanel">
 					<div class="panel-heading panelHeaderDiv">
 						<h2 class="panelHeader1">About Me</h2>
 					</div>
@@ -69,9 +69,9 @@
 
 
 			<div class="col-md-3">
-				<div class="panel panel-success">
-					<div class="panel-heading connectHeading">
-						<h2 class="panelHeader2">Connect with Me</h2>
+				<div class="panel panel-primary wholePanel">
+					<div class="panel-heading panelHeaderDiv">
+						<h2 class="panelHeader1">Connect with Me</h2>
 					</div>
 					<div class="panel-body">
 						<div class="col-md-4 icon-image">
