added portfolio page

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<link rel="stylesheet" type="text/css" href="assets/css/990.css">
+
 </head>
 
 <body>
@@ -80,14 +82,16 @@
 						<h2 class="panelHeader1">Connect with Me</h2>
 					</div>
 					<div class="panel-body">
-						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_linkedin-square-gloss-social-media_765001.png" class="img-responsive" alt="Image"></a>
-						</div>
-						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_github-square-shadow-social-media_765124.png" class="img-responsive" alt="Image"></a>
-						</div>
-						<div class="col-md-4 icon-image">
-							<a href="#"><img src="assets/images/if_stackoverflow-square-social-media_764927.png" class="img-responsive" alt="Image"></a>
+						<div class="row">
+							<div class="col-md-4 icon-image">
+								<a href="#"><img src="assets/images/if_linkedin-square-gloss-social-media_765001.png" class="img-responsive" alt="Image"></a>
+							</div>
+							<div class="col-md-4 icon-image">
+								<a href="#"><img src="assets/images/if_github-square-shadow-social-media_765124.png" class="img-responsive" alt="Image"></a>
+							</div>
+							<div class="col-md-4 icon-image">
+								<a href="#"><img src="assets/images/if_stackoverflow-square-social-media_764927.png" class="img-responsive" alt="Image"></a>
+							</div>
 						</div>
 					</div>
 				</div>
