--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+	<link rel="stylesheet" type="text/css" href="assets/css/990.css">
+
 </head>
 
 <body>
@@ -74,6 +76,7 @@
 						<h2 class="panelHeader1">Connect with Me</h2>
 					</div>
 					<div class="panel-body">
+						<div class="row">
 						<div class="col-md-4 icon-image">
 							<a href="#"><img src="assets/images/if_linkedin-square-gloss-social-media_765001.png" class="img-responsive" alt="Image"></a>
 						</div>
@@ -83,6 +86,7 @@
 						<div class="col-md-4 icon-image">
 							<a href="#"><img src="assets/images/if_stackoverflow-square-social-media_764927.png" class="img-responsive" alt="Image"></a>
 						</div>
+					</div>
 					</div>
 				</div>
 			</div>
