added link to news scraper

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,10 @@
 			$("#crashpadlink").on("click", function(){
 				window.open("http://www.studentcrashpads.com");
 			})
+			
+			$("#newsScraperLink").on("click", function(){
+				window.open("https://news-scraping-device.herokuapp.com/");
+			})
 		})
 	</script>
 	<!-- Beginning of NavBar -->
@@ -73,8 +77,8 @@
 								<p class="portfolio-text">CrashPad</p>
 							</div>
 							<div class="col-md-5 portfolio-img-container">
-								<img src="assets/images/game-controller-joystick-joypad-gamepad-159204.jpeg" class="img-responsive portfolio-img" alt="Image">
-								<p class="portfolio-text">RPG Game</p>
+								<img id="newsScraperLink" src="assets/images/game-controller-joystick-joypad-gamepad-159204.jpeg" class="img-responsive portfolio-img" alt="Image">
+								<p class="portfolio-text">News Scraper</p>
 							</div>
 							<div class="col-md-1">
 							</div>
